--- a/package.json
+++ b/package.json
@@ -1,618 +1,26 @@
 {
-  "name": "hello-node-actions",
-  "version": "1.0.0",
-  "description": "Test app",
-  "main": "app.js",
-  "dependencies": {
-    "abbrev": "^2.0.0",
-    "accepts": "^1.3.8",
-    "acorn": "^8.12.1",
-    "acorn-import-assertions": "^1.9.0",
-    "acorn-walk": "^8.3.3",
-    "adjust-sourcemap-loader": "^4.0.0",
-    "adm-zip": "^0.5.16",
-    "agent-base": "^7.1.1",
-    "aggregate-error": "^3.1.0",
-    "ajv": "^8.12.0",
-    "ajv-formats": "^2.1.1",
-    "ajv-keywords": "^5.1.0",
-    "angular-in-memory-web-api": "^0.17.0",
-    "ansi-colors": "^4.1.3",
-    "ansi-escapes": "^4.3.2",
-    "ansi-html-community": "^0.0.8",
-    "ansi-regex": "^5.0.1",
-    "ansi-styles": "^3.2.1",
-    "anymatch": "^3.1.3",
-    "arg": "^4.1.3",
-    "argparse": "^1.0.10",
-    "array-flatten": "^1.1.1",
-    "array-union": "^1.0.2",
-    "array-uniq": "^1.0.3",
-    "arrify": "^1.0.1",
-    "asn1": "^0.2.6",
-    "assert-plus": "^1.0.0",
-    "asynckit": "^0.4.0",
-    "autoprefixer": "^10.4.17",
-    "aws-sign2": "^0.7.0",
-    "aws4": "^1.13.2",
-    "babel-loader": "^9.1.3",
-    "babel-plugin-istanbul": "^6.1.1",
-    "babel-plugin-polyfill-corejs2": "^0.4.11",
-    "babel-plugin-polyfill-corejs3": "^0.9.0",
-    "babel-plugin-polyfill-regenerator": "^0.5.5",
-    "balanced-match": "^1.0.2",
-    "base64-js": "^1.5.1",
-    "base64id": "^2.0.0",
-    "batch": "^0.6.1",
-    "bcrypt-pbkdf": "^1.0.2",
-    "big.js": "^5.2.2",
-    "binary-extensions": "^2.3.0",
-    "bl": "^4.1.0",
-    "blocking-proxy": "^1.0.1",
-    "body-parser": "^1.20.2",
-    "bonjour-service": "^1.2.1",
-    "boolbase": "^1.0.0",
-    "brace-expansion": "^1.1.11",
-    "braces": "^3.0.3",
-    "browserslist": "^4.23.3",
-    "browserstack": "^1.6.1",
-    "buffer": "^5.7.1",
-    "buffer-from": "^1.1.2",
-    "bytes": "^3.1.2",
-    "cacache": "^18.0.4",
-    "call-bind": "^1.0.7",
-    "callsites": "^3.1.0",
-    "camelcase": "^5.3.1",
-    "caniuse-lite": "^1.0.30001655",
-    "caseless": "^0.12.0",
-    "chalk": "^2.4.2",
-    "chardet": "^0.7.0",
-    "chokidar": "^3.6.0",
-    "chownr": "^2.0.0",
-    "chrome-trace-event": "^1.0.4",
-    "clean-stack": "^2.2.0",
-    "cli-cursor": "^3.1.0",
-    "cli-spinners": "^2.9.2",
-    "cli-width": "^4.1.0",
-    "cliui": "^8.0.1",
-    "clone": "^1.0.4",
-    "clone-deep": "^4.0.1",
-    "color-convert": "^1.9.3",
-    "color-name": "^1.1.3",
-    "colorette": "^2.0.20",
-    "colors": "^1.4.0",
-    "combined-stream": "^1.0.8",
-    "commander": "^2.20.3",
-    "common-path-prefix": "^3.0.0",
-    "compressible": "^2.0.18",
-    "compression": "^1.7.4",
-    "concat-map": "^0.0.1",
-    "connect": "^3.7.0",
-    "connect-history-api-fallback": "^2.0.0",
-    "content-disposition": "^0.5.4",
-    "content-type": "^1.0.5",
-    "convert-source-map": "^1.9.0",
-    "cookie": "^0.4.2",
-    "cookie-signature": "^1.0.6",
-    "copy-anything": "^2.0.6",
-    "copy-webpack-plugin": "^11.0.0",
-    "copyfiles": "^2.4.1",
-    "core-js-compat": "^3.38.1",
-    "core-util-is": "^1.0.3",
-    "cors": "^2.8.5",
-    "cosmiconfig": "^9.0.0",
-    "create-require": "^1.1.1",
-    "critters": "^0.0.20",
-    "cross-spawn": "^7.0.3",
-    "css-loader": "^6.10.0",
-    "css-select": "^5.1.0",
-    "css-what": "^6.1.0",
-    "cssesc": "^3.0.0",
-    "custom-event": "^1.0.1",
-    "dashdash": "^1.14.1",
-    "date-format": "^4.0.14",
-    "debug": "^4.3.6",
-    "decamelize": "^1.2.0",
-    "default-gateway": "^6.0.3",
-    "defaults": "^1.0.4",
-    "define-data-property": "^1.1.4",
-    "define-lazy-prop": "^2.0.0",
-    "del": "^2.2.2",
-    "delayed-stream": "^1.0.0",
-    "depd": "^2.0.0",
-    "destroy": "^1.2.0",
-    "detect-node": "^2.1.0",
-    "di": "^0.0.1",
-    "diff": "^4.0.2",
-    "dir-glob": "^3.0.1",
-    "dns-packet": "^5.6.1",
-    "dom-serialize": "^2.2.1",
-    "dom-serializer": "^2.0.0",
-    "domelementtype": "^2.3.0",
-    "domhandler": "^5.0.3",
-    "domutils": "^3.1.0",
-    "eastasianwidth": "^0.2.0",
-    "ecc-jsbn": "^0.1.2",
-    "ee-first": "^1.1.1",
-    "electron-to-chromium": "^1.5.13",
-    "emoji-regex": "^8.0.0",
-    "emojis-list": "^3.0.0",
-    "encodeurl": "^1.0.2",
-    "encoding": "^0.1.13",
-    "engine.io": "^6.5.5",
-    "engine.io-parser": "^5.2.3",
-    "enhanced-resolve": "^5.17.1",
-    "ent": "^2.2.1",
-    "entities": "^4.5.0",
-    "env-paths": "^2.2.1",
-    "err-code": "^2.0.3",
-    "errno": "^0.1.8",
-    "error-ex": "^1.3.2",
-    "es-define-property": "^1.0.0",
-    "es-errors": "^1.3.0",
-    "es-module-lexer": "^1.5.4",
-    "es6-promise": "^4.2.8",
-    "es6-promisify": "^5.0.0",
-    "esbuild": "^0.20.0",
-    "esbuild-wasm": "^0.20.0",
-    "escalade": "^3.2.0",
-    "escape-html": "^1.0.3",
-    "escape-string-regexp": "^1.0.5",
-    "eslint-scope": "^5.1.1",
-    "esprima": "^4.0.1",
-    "esrecurse": "^4.3.0",
-    "estraverse": "^4.3.0",
-    "esutils": "^2.0.3",
-    "etag": "^1.8.1",
-    "eventemitter3": "^4.0.7",
-    "events": "^3.3.0",
-    "execa": "^5.1.1",
-    "exit": "^0.1.2",
-    "exponential-backoff": "^3.1.1",
-    "express": "^4.19.2",
-    "extend": "^3.0.2",
-    "external-editor": "^3.1.0",
-    "extsprintf": "^1.3.0",
-    "fast-deep-equal": "^3.1.3",
-    "fast-glob": "^3.3.2",
-    "fast-json-stable-stringify": "^2.1.0",
-    "fastq": "^1.17.1",
-    "faye-websocket": "^0.11.4",
-    "figures": "^3.2.0",
-    "fill-range": "^7.1.1",
-    "finalhandler": "^1.1.2",
-    "find-cache-dir": "^4.0.0",
-    "find-up": "^4.1.0",
-    "flat": "^5.0.2",
-    "flatted": "^3.3.1",
-    "follow-redirects": "^1.15.8",
-    "foreground-child": "^3.3.0",
-    "forever-agent": "^0.6.1",
-    "form-data": "^2.3.3",
-    "forwarded": "^0.2.0",
-    "fraction.js": "^4.3.7",
-    "fresh": "^0.5.2",
-    "fs-extra": "^8.1.0",
-    "fs-minipass": "^3.0.3",
-    "fs-monkey": "^1.0.6",
-    "fs.realpath": "^1.0.0",
-    "function-bind": "^1.1.2",
-    "gensync": "^1.0.0-beta.2",
-    "get-caller-file": "^2.0.5",
-    "get-intrinsic": "^1.2.4",
-    "get-package-type": "^0.1.0",
-    "get-stream": "^6.0.1",
-    "getpass": "^0.1.7",
-    "glob": "^7.2.3",
-    "glob-parent": "^5.1.2",
-    "glob-to-regexp": "^0.4.1",
-    "globals": "^11.12.0",
-    "globby": "^13.2.2",
-    "gopd": "^1.0.1",
-    "graceful-fs": "^4.2.11",
-    "handle-thing": "^2.0.1",
-    "har-schema": "^2.0.0",
-    "har-validator": "^5.1.5",
-    "has-ansi": "^2.0.0",
-    "has-flag": "^3.0.0",
-    "has-property-descriptors": "^1.0.2",
-    "has-proto": "^1.0.3",
-    "has-symbols": "^1.0.3",
-    "hasown": "^2.0.2",
-    "hosted-git-info": "^7.0.2",
-    "hpack.js": "^2.1.6",
-    "html-entities": "^2.5.2",
-    "html-escaper": "^2.0.2",
-    "htmlparser2": "^8.0.2",
-    "http-cache-semantics": "^4.1.1",
-    "http-deceiver": "^1.2.7",
-    "http-errors": "^2.0.0",
-    "http-parser-js": "^0.5.8",
-    "http-proxy": "^1.18.1",
-    "http-proxy-agent": "^7.0.2",
-    "http-proxy-middleware": "^2.0.6",
-    "http-signature": "^1.2.0",
-    "https-proxy-agent": "^7.0.2",
-    "human-signals": "^2.1.0",
-    "iconv-lite": "^0.4.24",
-    "icss-utils": "^5.1.0",
-    "ieee754": "^1.2.1",
-    "ignore": "^5.3.2",
-    "ignore-walk": "^6.0.5",
-    "image-size": "^0.5.5",
-    "immediate": "^3.0.6",
-    "immutable": "^4.3.7",
-    "import-fresh": "^3.3.0",
-    "imurmurhash": "^0.1.4",
-    "indent-string": "^4.0.0",
-    "inflight": "^1.0.6",
-    "inherits": "^2.0.4",
-    "ini": "^4.1.1",
-    "inquirer": "^9.2.14",
-    "ip-address": "^9.0.5",
-    "ipaddr.js": "^2.2.0",
-    "is-arrayish": "^0.2.1",
-    "is-binary-path": "^2.1.0",
-    "is-core-module": "^2.15.1",
-    "is-docker": "^2.2.1",
-    "is-extglob": "^2.1.1",
-    "is-fullwidth-code-point": "^3.0.0",
-    "is-glob": "^4.0.3",
-    "is-interactive": "^1.0.0",
-    "is-lambda": "^1.0.1",
-    "is-number": "^7.0.0",
-    "is-path-cwd": "^1.0.0",
-    "is-path-in-cwd": "^1.0.1",
-    "is-path-inside": "^1.0.1",
-    "is-plain-obj": "^3.0.0",
-    "is-plain-object": "^2.0.4",
-    "is-stream": "^2.0.1",
-    "is-typedarray": "^1.0.0",
-    "is-unicode-supported": "^0.1.0",
-    "is-what": "^3.14.1",
-    "is-wsl": "^2.2.0",
-    "isarray": "^0.0.1",
-    "isbinaryfile": "^4.0.10",
-    "isexe": "^2.0.0",
-    "isobject": "^3.0.1",
-    "isstream": "^0.1.2",
-    "istanbul-lib-coverage": "^3.2.2",
-    "istanbul-lib-instrument": "^5.2.1",
-    "istanbul-lib-report": "^3.0.1",
-    "istanbul-lib-source-maps": "^4.0.1",
-    "istanbul-reports": "^3.1.7",
-    "jackspeak": "^3.4.3",
-    "jasmine": "^2.8.0",
-    "jasmine-core": "^5.1.2",
-    "jasmine-marbles": "^0.9.2",
-    "jasmine-spec-reporter": "^7.0.0",
-    "jasminewd2": "^2.2.0",
-    "jest": "^29.7.0",
-    "jest-worker": "^27.5.1",
-    "jiti": "^1.21.6",
-    "js-tokens": "^4.0.0",
-    "js-yaml": "^3.14.1",
-    "jsbn": "^1.1.0",
-    "jsesc": "^2.5.2",
-    "json-parse-even-better-errors": "^3.0.2",
-    "json-schema": "^0.4.0",
-    "json-schema-traverse": "^1.0.0",
-    "json-stringify-safe": "^5.0.1",
-    "json5": "^2.2.3",
-    "jsonc-parser": "^3.2.1",
-    "jsonfile": "^4.0.0",
-    "jsonparse": "^1.3.1",
-    "jsprim": "^1.4.2",
-    "jszip": "^3.10.1",
-    "karma": "^6.4.4",
-    "karma-chrome-launcher": "^3.2.0",
-    "karma-coverage": "^2.2.1",
-    "karma-jasmine": "^5.1.0",
-    "karma-jasmine-html-reporter": "^2.1.0",
-    "karma-source-map-support": "^1.4.0",
-    "kind-of": "^6.0.3",
-    "klona": "^2.0.6",
-    "launch-editor": "^2.8.2",
-    "less": "^4.2.0",
-    "less-loader": "^11.1.0",
-    "license-webpack-plugin": "^4.0.2",
-    "lie": "^3.3.0",
-    "lines-and-columns": "^1.2.4",
-    "loader-runner": "^4.3.0",
-    "loader-utils": "^3.2.1",
-    "locate-path": "^5.0.0",
-    "lodash": "^4.17.21",
-    "lodash.debounce": "^4.0.8",
-    "log-symbols": "^4.1.0",
-    "log4js": "^6.9.1",
-    "lru-cache": "^5.1.1",
-    "magic-string": "^0.30.7",
-    "make-dir": "^4.0.0",
-    "make-error": "^1.3.6",
-    "make-fetch-happen": "^13.0.1",
-    "media-typer": "^0.3.0",
-    "memfs": "^3.5.3",
-    "merge-descriptors": "^1.0.1",
-    "merge-stream": "^2.0.0",
-    "merge2": "^1.4.1",
-    "methods": "^1.1.2",
-    "micromatch": "^4.0.8",
-    "mime": "^2.6.0",
-    "mime-db": "^1.52.0",
-    "mime-types": "^2.1.35",
-    "mimic-fn": "^2.1.0",
-    "mini-css-extract-plugin": "^2.8.0",
-    "minimalistic-assert": "^1.0.1",
-    "minimatch": "^3.1.2",
-    "minimist": "^1.2.8",
-    "minipass": "^7.1.2",
-    "minipass-collect": "^2.0.1",
-    "minipass-fetch": "^3.0.5",
-    "minipass-flush": "^1.0.5",
-    "minipass-json-stream": "^1.0.2",
-    "minipass-pipeline": "^1.2.4",
-    "minipass-sized": "^1.0.3",
-    "minizlib": "^2.1.2",
-    "mkdirp": "^1.0.4",
-    "mrmime": "^2.0.0",
-    "ms": "^2.1.2",
-    "multicast-dns": "^7.2.5",
-    "mute-stream": "^1.0.0",
-    "nanoid": "^3.3.7",
-    "needle": "^3.3.1",
-    "negotiator": "^0.6.3",
-    "neo-async": "^2.6.2",
-    "node-forge": "^1.3.1",
-    "node-gyp": "^10.2.0",
-    "node-releases": "^2.0.18",
-    "noms": "^0.0.0",
-    "nopt": "^7.2.1",
-    "normalize-package-data": "^6.0.2",
-    "normalize-path": "^3.0.0",
-    "normalize-range": "^0.1.2",
-    "npm-bundled": "^3.0.1",
-    "npm-install-checks": "^6.3.0",
-    "npm-normalize-package-bin": "^3.0.1",
-    "npm-package-arg": "^11.0.1",
-    "npm-packlist": "^8.0.2",
-    "npm-pick-manifest": "^9.0.0",
-    "npm-registry-fetch": "^16.2.1",
-    "npm-run-path": "^4.0.1",
-    "nth-check": "^2.1.1",
-    "oauth-sign": "^0.9.0",
-    "object-assign": "^4.1.1",
-    "object-inspect": "^1.13.2",
-    "obuf": "^1.1.2",
-    "on-finished": "^2.4.1",
-    "on-headers": "^1.0.2",
-    "once": "^1.4.0",
-    "onetime": "^5.1.2",
-    "open": "^8.4.2",
-    "ora": "^5.4.1",
-    "os-tmpdir": "^1.0.2",
-    "p-limit": "^2.3.0",
-    "p-locate": "^4.1.0",
-    "p-map": "^4.0.0",
-    "p-retry": "^4.6.2",
-    "p-try": "^2.2.0",
-    "package-json-from-dist": "^1.0.0",
-    "pacote": "^17.0.6",
-    "pako": "^1.0.11",
-    "parent-module": "^1.0.1",
-    "parse-json": "^5.2.0",
-    "parse-node-version": "^1.0.1",
-    "parse5": "^7.1.2",
-    "parse5-html-rewriting-stream": "^7.0.0",
-    "parse5-sax-parser": "^7.0.0",
-    "parseurl": "^1.3.3",
-    "path-exists": "^4.0.0",
-    "path-is-absolute": "^1.0.1",
-    "path-is-inside": "^1.0.2",
-    "path-key": "^3.1.1",
-    "path-parse": "^1.0.7",
-    "path-scurry": "^1.11.1",
-    "path-to-regexp": "^0.1.7",
-    "path-type": "^4.0.0",
-    "performance-now": "^2.1.0",
-    "picocolors": "^1.1.0",
-    "picomatch": "^4.0.1",
-    "pify": "^2.3.0",
-    "pinkie": "^2.0.4",
-    "pinkie-promise": "^2.0.1",
-    "piscina": "^4.3.1",
-    "pkg-dir": "^7.0.0",
-    "postcss": "^8.4.35",
-    "postcss-loader": "^8.1.0",
-    "postcss-modules-extract-imports": "^3.1.0",
-    "postcss-modules-local-by-default": "^4.0.5",
-    "postcss-modules-scope": "^3.2.0",
-    "postcss-modules-values": "^4.0.0",
-    "postcss-selector-parser": "^6.1.2",
-    "postcss-value-parser": "^4.2.0",
-    "pretty-bytes": "^5.6.0",
-    "proc-log": "^3.0.0",
-    "process-nextick-args": "^2.0.1",
-    "promise-inflight": "^1.0.1",
-    "promise-retry": "^2.0.1",
-    "protractor": "^7.0.0",
-    "proxy-addr": "^2.0.7",
-    "prr": "^1.0.1",
-    "psl": "^1.9.0",
-    "punycode": "^1.4.1",
-    "q": "^1.4.1",
-    "qjobs": "^1.2.0",
-    "qs": "^6.11.0",
-    "queue-microtask": "^1.2.3",
-    "randombytes": "^2.1.0",
-    "range-parser": "^1.2.1",
-    "raw-body": "^2.5.2",
-    "read-package-json": "^7.0.1",
-    "read-package-json-fast": "^3.0.2",
-    "readable-stream": "^1.0.34",
-    "readdirp": "^3.6.0",
-    "reflect-metadata": "^0.2.2",
-    "regenerate": "^1.4.2",
-    "regenerate-unicode-properties": "^10.1.1",
-    "regenerator-runtime": "^0.14.1",
-    "regenerator-transform": "^0.15.2",
-    "regex-parser": "^2.3.0",
-    "regexpu-core": "^5.3.2",
-    "regjsparser": "^0.9.1",
-    "request": "^2.88.2",
-    "require-directory": "^2.1.1",
-    "require-from-string": "^2.0.2",
-    "require-main-filename": "^2.0.0",
-    "requires-port": "^1.0.0",
-    "resolve": "^1.22.8",
-    "resolve-from": "^5.0.0",
-    "resolve-url-loader": "^5.0.0",
-    "restore-cursor": "^3.1.0",
-    "retry": "^0.12.0",
-    "reusify": "^1.0.4",
-    "rfdc": "^1.4.1",
-    "rimraf": "^3.0.2",
-    "rollup": "^4.21.2",
-    "run-async": "^3.0.0",
-    "run-parallel": "^1.2.0",
-    "rxjs": "^7.8.1",
-    "safe-buffer": "^5.2.1",
-    "safer-buffer": "^2.1.2",
-    "sass": "^1.70.0",
-    "sass-loader": "^14.1.0",
-    "saucelabs": "^1.5.0",
-    "sax": "^1.4.1",
-    "schema-utils": "^4.2.0",
-    "select-hose": "^2.0.0",
-    "selenium-webdriver": "^3.6.0",
-    "selfsigned": "^2.4.1",
-    "semver": "^7.6.0",
-    "send": "^0.18.0",
-    "serialize-javascript": "^6.0.2",
-    "serve-index": "^1.9.1",
-    "serve-static": "^1.15.0",
-    "set-blocking": "^2.0.0",
-    "set-function-length": "^1.2.2",
-    "setimmediate": "^1.0.5",
-    "setprototypeof": "^1.2.0",
-    "shallow-clone": "^3.0.1",
-    "shebang-command": "^2.0.0",
-    "shebang-regex": "^3.0.0",
-    "shell-quote": "^1.8.1",
-    "side-channel": "^1.0.6",
-    "signal-exit": "^3.0.7",
-    "sigstore": "^2.3.1",
-    "slash": "^4.0.0",
-    "smart-buffer": "^4.2.0",
-    "socket.io": "^4.7.5",
-    "socket.io-adapter": "^2.5.5",
-    "socket.io-parser": "^4.2.4",
-    "sockjs": "^0.3.24",
-    "socks": "^2.8.3",
-    "socks-proxy-agent": "^8.0.4",
-    "source-map": "^0.7.4",
-    "source-map-js": "^1.2.0",
-    "source-map-loader": "^5.0.0",
-    "source-map-support": "^0.5.21",
-    "spdx-correct": "^3.2.0",
-    "spdx-exceptions": "^2.5.0",
-    "spdx-expression-parse": "^3.0.1",
-    "spdx-license-ids": "^3.0.20",
-    "spdy": "^4.0.2",
-    "spdy-transport": "^3.0.0",
-    "sprintf-js": "^1.0.3",
-    "sshpk": "^1.18.0",
-    "ssri": "^10.0.6",
-    "statuses": "^1.5.0",
-    "streamroller": "^3.1.5",
-    "string_decoder": "^0.10.31",
-    "string-width": "^4.2.3",
-    "string-width-cjs": "^4.2.3",
-    "strip-ansi": "^6.0.1",
-    "strip-ansi-cjs": "^6.0.1",
-    "strip-final-newline": "^2.0.0",
-    "supertest": "^7.0.0",
-    "supports-color": "^5.5.0",
-    "supports-preserve-symlinks-flag": "^1.0.0",
-    "symbol-observable": "^4.0.0",
-    "tapable": "^2.2.1",
-    "tar": "^6.2.1",
-    "terser": "^5.27.0",
-    "terser-webpack-plugin": "^5.3.10",
-    "test-exclude": "^6.0.0",
-    "through2": "^2.0.5",
-    "thunky": "^1.1.0",
-    "tmp": "^0.0.33",
-    "to-fast-properties": "^2.0.0",
-    "to-regex-range": "^5.0.1",
-    "toidentifier": "^1.0.1",
-    "tough-cookie": "^2.5.0",
-    "tree-kill": "^1.2.2",
-    "ts-node": "^10.9.2",
-    "tslib": "^2.7.0",
-    "tuf-js": "^2.2.1",
-    "tunnel-agent": "^0.6.0",
-    "tweetnacl": "^0.14.5",
-    "type-fest": "^0.21.3",
-    "type-is": "^1.6.18",
-    "typed-assert": "^1.0.9",
-    "typescript": "^4.9.5",
-    "ua-parser-js": "^0.7.38",
-    "undici": "^6.6.2",
-    "undici-types": "^6.19.8",
-    "unicode-canonical-property-names-ecmascript": "^2.0.0",
-    "unicode-match-property-ecmascript": "^2.0.0",
-    "unicode-match-property-value-ecmascript": "^2.1.0",
-    "unicode-property-aliases-ecmascript": "^2.1.0",
-    "unique-filename": "^3.0.0",
-    "unique-slug": "^4.0.0",
-    "universalify": "^0.1.2",
-    "unpipe": "^1.0.0",
-    "untildify": "^4.0.0",
-    "update-browserslist-db": "^1.1.0",
-    "uri-js": "^4.4.1",
-    "util-deprecate": "^1.0.2",
-    "utils-merge": "^1.0.1",
-    "uuid": "^3.4.0",
-    "v8-compile-cache-lib": "^3.0.1",
-    "validate-npm-package-license": "^3.0.4",
-    "validate-npm-package-name": "^5.0.1",
-    "vary": "^1.1.2",
-    "verror": "^1.10.0",
-    "void-elements": "^2.0.1",
-    "watchpack": "^2.4.0",
-    "wbuf": "^1.7.3",
-    "wcwidth": "^1.0.1",
-    "webdriver-js-extender": "^2.1.0",
-    "webdriver-manager": "^12.1.9",
-    "webpack": "^5.90.1",
-    "webpack-dev-middleware": "^6.1.1",
-    "webpack-dev-server": "^4.15.1",
-    "webpack-merge": "^5.10.0",
-    "webpack-sources": "^3.2.3",
-    "webpack-subresource-integrity": "^5.1.0",
-    "websocket-driver": "^0.7.4",
-    "websocket-extensions": "^0.1.4",
-    "which": "^1.3.1",
-    "which-module": "^2.0.1",
-    "wildcard": "^2.0.1",
-    "wrap-ansi": "^6.2.0",
-    "wrap-ansi-cjs": "^7.0.0",
-    "wrappy": "^1.0.2",
-    "ws": "^8.17.1",
-    "xml2js": "^0.4.23",
-    "xmlbuilder": "^11.0.1",
-    "xtend": "^4.0.2",
-    "y18n": "^5.0.8",
-    "yallist": "^3.1.1",
-    "yargs": "^17.7.2",
-    "yargs-parser": "^21.1.1",
-    "yn": "^3.1.1",
-    "yocto-queue": "^1.1.1",
-    "zone.js": "^0.14.10"
-  },
-  "scripts": {
-    "test": "npm test"
-  },
-  "author": "Niran",
-  "license": "ISC"
-}
+    "scripts": {
+      "build": "npm run donodemodulesstuff && npm run copyfilestodist && npm run removetemp",
+      "donodemodulesstuff": "npm run copypackagejsontotemp && npm run installproductionnodemodules",
+      "copypackagejsontotemp": "shx mkdir -p ./temp && shx cp ./package.json ./temp/package.json",
+      "installproductionnodemodules": "cd ./temp && npm install --production",
+      "copyfilestodist": "shx cp -r ./src/web/ ./dist && shx cp -r ./temp/node_modules/ ./dist/node_modules/ && shx rm -rf ./dist/web",
+      "removetemp": "shx rm -rf ./temp",
+      "test": "cross-env NODE_ENV=test jest --testTimeout=10000 --detectOpenHandles"
+    },
+    "jest": {
+      "testEnvironment": "node",
+      "coveragePathIgnorePatterns": [
+        "/node_modules/"
+      ]
+    },
+    "dependencies": {
+      "express": "latest"
+    },
+    "devDependencies": {
+      "cross-env": "latest",
+      "jest": "latest",
+      "shx": "latest",
+      "supertest": "latest"
+    }
+  }
