--- a/.github/workflows/node-ci.yml
+++ b/.github/workflows/node-ci.yml
@@ -3,8 +3,14 @@ name: Node.js CI
 on: [push,workflow_dispatch]
 
 jobs:
+  say-hello:
+    runs-on: ubuntu-latest
+    steps:
+      - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
+  
   build-node:
     runs-on: ubuntu-latest
+    needs: say-hello
 
     strategy:
       matrix:
