--- a/.github/workflows/node-ci.yml
+++ b/.github/workflows/node-ci.yml
@@ -33,16 +33,18 @@ jobs:
     runs-on: ubuntu-latest
     environment: dev
     steps:
-      run: echo "Deploying to DEV app service: $TEST_APP_SERVICE_NAME"
+      - run: echo "Deploying to DEV app service"
 
   deploy-uat:
     needs: deploy-dev
     runs-on: ubuntu-latest
     environment: uat
-    run: echo "Deploying to UAT app service: $TEST_APP_SERVICE_NAME"
+    steps:
+      - run: echo "Deploying to UAT app service"
 
   deploy-prod:
     needs: deploy-uat
     runs-on: ubuntu-latest
     environment: prod
-    run: echo "Deploying to PROD app service: $TEST_APP_SERVICE_NAME"
+    steps:
+      - run: echo "Deploying to PROD app service"
