--- a/.github/workflows/node-ci.yml
+++ b/.github/workflows/node-ci.yml
@@ -33,18 +33,18 @@ jobs:
     runs-on: ubuntu-latest
     environment: dev
     steps:
-      - run: echo "Deploying to DEV app service"
+      - run: echo "Deploying to DEV app service $TEST_APP_SERVICE_NAME"
 
   deploy-uat:
     needs: deploy-dev
     runs-on: ubuntu-latest
     environment: uat
     steps:
-      - run: echo "Deploying to UAT app service"
+      - run: echo "Deploying to UAT app service $TEST_APP_SERVICE_NAME"
 
   deploy-prod:
     needs: deploy-uat
     runs-on: ubuntu-latest
     environment: prod
     steps:
-      - run: echo "Deploying to PROD app service"
+      - run: echo "Deploying to PROD app service $TEST_APP_SERVICE_NAME"
