--- a/.github/workflows/node-ci.yml
+++ b/.github/workflows/node-ci.yml
@@ -2,6 +2,10 @@ name: Node.js CI
 
 on: [push,workflow_dispatch]
 
+concurrency:
+  group: ci-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   say-hello:
     runs-on: ubuntu-latest
@@ -33,18 +37,18 @@ jobs:
     runs-on: ubuntu-latest
     environment: dev
     steps:
-      - run: echo "Deploying to DEV app service $TEST_APP_SERVICE_NAME"
+      - run: echo "Deploying to DEV app service  ${{ TEST_APP_SERVICE_NAME }}"
 
   deploy-uat:
     needs: deploy-dev
     runs-on: ubuntu-latest
     environment: uat
     steps:
-      - run: echo "Deploying to UAT app service $TEST_APP_SERVICE_NAME"
+      - run: echo "Deploying to UAT app service  ${{ TEST_APP_SERVICE_NAME }}"
 
   deploy-prod:
     needs: deploy-uat
     runs-on: ubuntu-latest
     environment: prod
     steps:
-      - run: echo "Deploying to PROD app service $TEST_APP_SERVICE_NAME"
+      - run: echo "Deploying to PROD app service  ${{ TEST_APP_SERVICE_NAME }}"
