--- a/.github/workflows/node-ci.yml
+++ b/.github/workflows/node-ci.yml
@@ -14,7 +14,6 @@ jobs:
   
   build-node:
     runs-on: ubuntu-latest
-    needs: say-hello
 
     strategy:
       matrix:
@@ -40,7 +39,7 @@ jobs:
       - run: echo "Deploying to DEV app service  ${{ env.TEST_APP_SERVICE_NAME }}"
 
   deploy-uat:
-    needs: deploy-dev
+    needs: build-node
     runs-on: ubuntu-latest
     environment: uat
     steps:
